(web admin) Fix z-index in input-group

--- a/html/pfappserver/root/static.alt/src/styles/_input-group.scss
+++ b/html/pfappserver/root/static.alt/src/styles/_input-group.scss
@@ -4,4 +4,8 @@
     // Create a stacking context so the pf-form-chosen (vue-multiselect)
     // component is displayed above any b-input-group component.
     z-index: 1;
+
+    .form-group.is-focus & {
+        z-index: 2;
+    }
 }
